--- a/assets/styles/02_components/_buttons.css
+++ b/assets/styles/02_components/_buttons.css
@@ -1,5 +1,5 @@
 .btn-custom {
-    height: var(--button-height-xs);
+    height: var(--button-height-sm);
     padding: 0;
     font-size: var(--font-size-sm);
     line-height: var(--line-height-tight);
