--- a/assets/styles/01_settings/_mixins.css
+++ b/assets/styles/01_settings/_mixins.css
@@ -33,11 +33,27 @@
 
 
 /* Tablet */
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 530px) {
     :root {
-        font-size: 14px;
+        font-size: 11px;
     }
 }
+
+
+/* Tablet */
+@media screen and (min-width: 640px) {
+    :root {
+        font-size: 12px;
+    }
+}
+
+/* Tablet */
+@media screen and (min-width: 768px) {
+    :root {
+        font-size: 13px;
+    }
+}
+
 
 /* Desktop */
 @media screen and (min-width: 1024px) {
