--- a/assets/styles/02_components/_buttons.css
+++ b/assets/styles/02_components/_buttons.css
@@ -1,7 +1,7 @@
 .btn-custom {
     height: var(--button-height-sm);
     padding: 0;
-    font-size: var(--font-size-sm);
+    font-size: var(--font-size-xs);
     line-height: var(--line-height-tight);
     border-radius: var(--radius-md);
     display: inline-flex;
@@ -28,7 +28,7 @@
 .btn-period {
     height: var(--button-height-xxs);
     padding: 0 var(--space-2);
-    font-size: var(--font-size-sm);
+    font-size: var(--font-size-xs);
     min-width: var(--button-height-xs);
     border-radius: var(--radius-md);
     background-color: var(--color-surface-secondary);
@@ -38,6 +38,7 @@
 
 .btn-period.active {
     background-color: var(--color-blue-600);
+    font-size: var(--font-size-xs);
     color: var(--color-text-inverse);
     border-color: var(--color-blue-600);
 }
@@ -63,6 +64,12 @@
     border: none;
     transition: all 0.15s ease-in-out;
 }
+.btn-group-control {
+    font-size: var(--font-size-xs);
+    
+}
+
+
 
 .btn-metric-add:focus,
 .btn-metric-remove:focus {
